// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The Business Case Review Component > matches the snapshot 1`] = `
<div
  className="margin-top-neg-1"
>
  <div
    className="easi-pdf-export"
  >
    <div
      className="grid-container"
    >
      <div
        className="easi-section"
        data-testid="section-wrapper"
      >
        <h2
          className="font-heading-xl margin-top-4"
        >
          General request information
        </h2>
        <dl
          title="General request information"
        >
          <div
            className="easi-review-row"
          >
            <div>
              <dt
                className="text-bold margin-bottom-05"
              >
                Project Name
              </dt>
              <dd
                className="description-definition margin-0"
              >
                EASi Test
              </dd>
            </div>
            <div>
              <dt
                className="text-bold margin-bottom-05"
              >
                Business Owner
              </dt>
              <dd
                className="description-definition margin-0"
              >
                Jane Smith
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row"
          >
            <div>
              <dt
                className="text-bold margin-bottom-05"
              >
                Requester
              </dt>
              <dd
                className="description-definition margin-0"
              >
                Jane Smith
              </dd>
            </div>
            <div>
              <dt
                className="text-bold margin-bottom-05"
              >
                Requester Phone Number
              </dt>
              <dd
                className="description-definition margin-0"
              >
                1234567890
              </dd>
            </div>
          </div>
        </dl>
      </div>
      <div
        className="easi-section"
        data-testid="section-wrapper"
      >
        <h2
          className="font-heading-xl margin-top-4"
        >
          Request description
        </h2>
        <dl
          title="Request description"
        >
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                What is your business or user need?
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test business need
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                How will CMS benefit from this effort?
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test CMS benefit
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                Summary of Current Solution
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test current solution summary
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                How does this effort align with organizational priorities?
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test priority alignment
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                How will you determine whether or not this effort is successful?
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test success indicators
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
    <div
      className="grid-container"
    >
      <h2
        className="font-heading-xl margin-top-4 easi-no-print"
      >
        Alternatives analysis
      </h2>
    </div>
    <div
      className="alternative-analysis-wrapper"
    >
      <div
        className="grid-container"
      >
        <div
          className="easi-responsive-tabs bg-base-lightest"
        >
          <div
            className="easi-responsive-tabs__navigation"
          >
            <div
              className="easi-responsive-tabs__tabs-wrapper"
            >
              <ul
                className="easi-responsive-tabs__tab-list"
              >
                <li
                  className="easi-responsive-tabs__tab easi-responsive-tabs__tab--selected"
                >
                  <button
                    className="easi-responsive-tabs__tab-btn"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="easi-responsive-tabs__tab-divider"
                    >
                      <span
                        className="easi-responsive-tabs__tab-text"
                      >
                        Preferred solution
                      </span>
                    </span>
                  </button>
                </li>
                <li
                  className="easi-responsive-tabs__tab"
                >
                  <button
                    className="easi-responsive-tabs__tab-btn"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="easi-responsive-tabs__tab-divider"
                    >
                      <span
                        className="easi-responsive-tabs__tab-text"
                      >
                        Alternative A
                      </span>
                    </span>
                  </button>
                </li>
                <li
                  className="easi-responsive-tabs__tab"
                >
                  <button
                    className="easi-responsive-tabs__tab-btn"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="easi-responsive-tabs__tab-divider"
                    >
                      <span
                        className="easi-responsive-tabs__tab-text"
                      >
                        Alternative B
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            className="bg-white easi-business-case__review-solutions-wrapper"
            style={
              {
                "overflow": "auto",
              }
            }
          >
            <h3
              className="easi-only-print business-case-solution-header"
            >
              Preferred solution
            </h3>
            <dl
              className="margin-bottom-0"
              title="Preferred solution"
            >
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Title
                  </dt>
                  <dd
                    className="description-definition margin-0"
                  >
                    Test preferred solution
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Summary
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test summary
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Acquisition approach
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test acquisition approach
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Do you need to host your solution?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Yes, in the cloud (AWS, Azure, etc.)
                  </dd>
                </div>
              </div>
              <div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Where are you planning to host?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test location
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      What, if any, type of cloud service are you planning to use for this solution (Iaas, PaaS, SaaS, etc.)?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cloud service
                    </dd>
                  </div>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Is your solution approved by IT Security for use at CMS (FedRAMP, FISMA approved, within the CMS cloud enclave)?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    No
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Is your solution in the process of CMS IT Security approval?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Yes
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Will your solution have a User Interface?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Yes
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Pros
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test pros
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Cons
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test cons
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="margin-y-1"
                >
                  <div
                    className="est-lifecycle-cost__total bg-base-lightest overflow-auto padding-x-2"
                  >
                    <dl
                      title="System total cost"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        System total cost
                      </dt>
                      <dd
                        className="description-definition margin-0"
                      >
                        $1,000
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
              <div
                className="easi-review-row margin-bottom-0"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    What is the cost savings or avoidance associated with this solution?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test cost savings
                  </dd>
                </div>
              </div>
            </dl>
            <div
              className="easi-only-print"
            >
              <h3
                className="easi-only-print business-case-solution-header"
              >
                Alternative A
              </h3>
              <dl
                className="margin-bottom-0"
                title="Alternative A"
              >
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Title
                    </dt>
                    <dd
                      className="description-definition margin-0"
                    >
                      Test alternative a solution
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Summary
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test summary
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Acquisition approach
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test acquisition approach
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Do you need to host your solution?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes, in the cloud (AWS, Azure, etc.)
                    </dd>
                  </div>
                </div>
                <div>
                  <div
                    className="easi-review-row"
                  >
                    <div
                      className="line-height-body-3"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        Where are you planning to host?
                      </dt>
                      <dd
                        className="description-definition margin-0 text-pre-wrap"
                      >
                        Test location
                      </dd>
                    </div>
                  </div>
                  <div
                    className="easi-review-row"
                  >
                    <div
                      className="line-height-body-3"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        What, if any, type of cloud service are you planning to use for this solution (Iaas, PaaS, SaaS, etc.)?
                      </dt>
                      <dd
                        className="description-definition margin-0 text-pre-wrap"
                      >
                        Test cloud service
                      </dd>
                    </div>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Is your solution approved by IT Security for use at CMS (FedRAMP, FISMA approved, within the CMS cloud enclave)?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      No
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Is your solution in the process of CMS IT Security approval?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Will your solution have a User Interface?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Pros
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test pros
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Cons
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cons
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="margin-y-1"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Requester indicated there is no associated cost with this solution
                    </dt>
                    <div
                      className="est-lifecycle-cost__total bg-base-lightest overflow-auto padding-x-2"
                    >
                      <dl
                        title="System total cost"
                      >
                        <dt
                          className="text-bold margin-bottom-05"
                        >
                          System total cost
                        </dt>
                        <dd
                          className="description-definition margin-0"
                        >
                          $0
                        </dd>
                      </dl>
                    </div>
                  </div>
                </div>
                <div
                  className="easi-review-row margin-bottom-0"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      What is the cost savings or avoidance associated with this solution?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cost savings
                    </dd>
                  </div>
                </div>
              </dl>
            </div>
            <div
              className="easi-only-print"
            >
              <h3
                className="easi-only-print business-case-solution-header"
              >
                Alternative B
              </h3>
              <dl
                className="margin-bottom-0"
                title="Alternative B"
              >
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Title
                    </dt>
                    <dd
                      className="description-definition margin-0"
                    >
                      Test alternative b solution
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Summary
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test summary
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Acquisition approach
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test acquisition approach
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Do you need to host your solution?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes, in the cloud (AWS, Azure, etc.)
                    </dd>
                  </div>
                </div>
                <div>
                  <div
                    className="easi-review-row"
                  >
                    <div
                      className="line-height-body-3"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        Where are you planning to host?
                      </dt>
                      <dd
                        className="description-definition margin-0 text-pre-wrap"
                      >
                        Test location
                      </dd>
                    </div>
                  </div>
                  <div
                    className="easi-review-row"
                  >
                    <div
                      className="line-height-body-3"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        What, if any, type of cloud service are you planning to use for this solution (Iaas, PaaS, SaaS, etc.)?
                      </dt>
                      <dd
                        className="description-definition margin-0 text-pre-wrap"
                      >
                        Test cloud service
                      </dd>
                    </div>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Is your solution approved by IT Security for use at CMS (FedRAMP, FISMA approved, within the CMS cloud enclave)?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      No
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Is your solution in the process of CMS IT Security approval?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Will your solution have a User Interface?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Pros
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test pros
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Cons
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cons
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="margin-y-1"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Requester indicated there is no associated cost with this solution
                    </dt>
                    <div
                      className="est-lifecycle-cost__total bg-base-lightest overflow-auto padding-x-2"
                    >
                      <dl
                        title="System total cost"
                      >
                        <dt
                          className="text-bold margin-bottom-05"
                        >
                          System total cost
                        </dt>
                        <dd
                          className="description-definition margin-0"
                        >
                          $0
                        </dd>
                      </dl>
                    </div>
                  </div>
                </div>
                <div
                  className="easi-review-row margin-bottom-0"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      What is the cost savings or avoidance associated with this solution?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cost savings
                    </dd>
                  </div>
                </div>
              </dl>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="easi-pdf-export__controls margin-top-6"
  >
    <button
      className="usa-button usa-button--unstyled easi-no-print display-flex flex-align-center"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="usa-icon margin-right-05"
        focusable={false}
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
        />
      </svg>
      Download Business Case as PDF
    </button>
  </div>
</div>
`;

exports[`The Business Case Review Component matches the snapshot 1`] = `
<div
  className="margin-top-neg-1"
>
  <div
    className="easi-pdf-export"
  >
    <div
      className="grid-container"
    >
      <div
        className="easi-section"
        data-testid="section-wrapper"
      >
        <h2
          className="font-heading-xl margin-top-4"
        >
          General request information
        </h2>
        <dl
          title="General request information"
        >
          <div
            className="easi-review-row"
          >
            <div>
              <dt
                className="text-bold margin-bottom-05"
              >
                Project Name
              </dt>
              <dd
                className="description-definition margin-0"
              >
                EASi Test
              </dd>
            </div>
            <div>
              <dt
                className="text-bold margin-bottom-05"
              >
                Business Owner
              </dt>
              <dd
                className="description-definition margin-0"
              >
                Jane Smith
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row"
          >
            <div>
              <dt
                className="text-bold margin-bottom-05"
              >
                Requester
              </dt>
              <dd
                className="description-definition margin-0"
              >
                Jane Smith
              </dd>
            </div>
            <div>
              <dt
                className="text-bold margin-bottom-05"
              >
                Requester Phone Number
              </dt>
              <dd
                className="description-definition margin-0"
              >
                1234567890
              </dd>
            </div>
          </div>
        </dl>
      </div>
      <div
        className="easi-section"
        data-testid="section-wrapper"
      >
        <h2
          className="font-heading-xl margin-top-4"
        >
          Request description
        </h2>
        <dl
          title="Request description"
        >
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                What is your business or user need?
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test business need
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                How will CMS benefit from this effort?
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test CMS benefit
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                Summary of Current Solution
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test current solution summary
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                How does this effort align with organizational priorities?
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test priority alignment
              </dd>
            </div>
          </div>
          <div
            className="easi-review-row margin-bottom-3"
          >
            <div
              className="line-height-body-3"
            >
              <dt
                className="text-bold margin-bottom-05"
              >
                How will you determine whether or not this effort is successful?
              </dt>
              <dd
                className="description-definition margin-0 text-pre-wrap"
              >
                Test success indicators
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
    <div
      className="grid-container"
    >
      <h2
        className="font-heading-xl margin-top-4 easi-no-print"
      >
        Alternatives analysis
      </h2>
    </div>
    <div
      className="alternative-analysis-wrapper"
    >
      <div
        className="grid-container"
      >
        <div
          className="easi-responsive-tabs bg-base-lightest"
        >
          <div
            className="easi-responsive-tabs__navigation"
          >
            <div
              className="easi-responsive-tabs__tabs-wrapper"
            >
              <ul
                className="easi-responsive-tabs__tab-list"
              >
                <li
                  className="easi-responsive-tabs__tab easi-responsive-tabs__tab--selected"
                >
                  <button
                    className="easi-responsive-tabs__tab-btn"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="easi-responsive-tabs__tab-divider"
                    >
                      <span
                        className="easi-responsive-tabs__tab-text"
                      >
                        Preferred solution
                      </span>
                    </span>
                  </button>
                </li>
                <li
                  className="easi-responsive-tabs__tab"
                >
                  <button
                    className="easi-responsive-tabs__tab-btn"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="easi-responsive-tabs__tab-divider"
                    >
                      <span
                        className="easi-responsive-tabs__tab-text"
                      >
                        Alternative A
                      </span>
                    </span>
                  </button>
                </li>
                <li
                  className="easi-responsive-tabs__tab"
                >
                  <button
                    className="easi-responsive-tabs__tab-btn"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="easi-responsive-tabs__tab-divider"
                    >
                      <span
                        className="easi-responsive-tabs__tab-text"
                      >
                        Alternative B
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
            </div>
            <div />
          </div>
          <div
            className="bg-white easi-business-case__review-solutions-wrapper"
            style={
              Object {
                "overflow": "auto",
              }
            }
          >
            <h3
              className="easi-only-print business-case-solution-header"
            >
              Preferred solution
            </h3>
            <dl
              className="margin-bottom-0"
              title="Preferred solution"
            >
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Title
                  </dt>
                  <dd
                    className="description-definition margin-0"
                  >
                    Test preferred solution
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Summary
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test summary
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Acquisition approach
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test acquisition approach
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Do you need to host your solution?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Yes, in the cloud (AWS, Azure, etc.)
                  </dd>
                </div>
              </div>
              <div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Where are you planning to host?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test location
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      What, if any, type of cloud service are you planning to use for this solution (Iaas, PaaS, SaaS, etc.)?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cloud service
                    </dd>
                  </div>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Is your solution approved by IT Security for use at CMS (FedRAMP, FISMA approved, within the CMS cloud enclave)?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    No
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Is your solution in the process of CMS IT Security approval?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Yes
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Will your solution have a User Interface?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Yes
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Pros
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test pros
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    Preferred solution: Cons
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test cons
                  </dd>
                </div>
              </div>
              <div
                className="easi-review-row"
              >
                <div
                  className="margin-y-1"
                >
                  <div
                    className="est-lifecycle-cost__total bg-base-lightest overflow-auto padding-x-2"
                  >
                    <dl
                      title="System total cost"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        System total cost
                      </dt>
                      <dd
                        className="description-definition margin-0"
                      >
                        $1,000
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
              <div
                className="easi-review-row margin-bottom-0"
              >
                <div
                  className="line-height-body-3"
                >
                  <dt
                    className="text-bold margin-bottom-05"
                  >
                    What is the cost savings or avoidance associated with this solution?
                  </dt>
                  <dd
                    className="description-definition margin-0 text-pre-wrap"
                  >
                    Test cost savings
                  </dd>
                </div>
              </div>
            </dl>
            <div
              className="easi-only-print"
            >
              <h3
                className="easi-only-print business-case-solution-header"
              >
                Alternative A
              </h3>
              <dl
                className="margin-bottom-0"
                title="Alternative A"
              >
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Title
                    </dt>
                    <dd
                      className="description-definition margin-0"
                    >
                      Test alternative a solution
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Summary
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test summary
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Acquisition approach
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test acquisition approach
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Do you need to host your solution?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes, in the cloud (AWS, Azure, etc.)
                    </dd>
                  </div>
                </div>
                <div>
                  <div
                    className="easi-review-row"
                  >
                    <div
                      className="line-height-body-3"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        Where are you planning to host?
                      </dt>
                      <dd
                        className="description-definition margin-0 text-pre-wrap"
                      >
                        Test location
                      </dd>
                    </div>
                  </div>
                  <div
                    className="easi-review-row"
                  >
                    <div
                      className="line-height-body-3"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        What, if any, type of cloud service are you planning to use for this solution (Iaas, PaaS, SaaS, etc.)?
                      </dt>
                      <dd
                        className="description-definition margin-0 text-pre-wrap"
                      >
                        Test cloud service
                      </dd>
                    </div>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Is your solution approved by IT Security for use at CMS (FedRAMP, FISMA approved, within the CMS cloud enclave)?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      No
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Is your solution in the process of CMS IT Security approval?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Will your solution have a User Interface?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Pros
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test pros
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative A: Cons
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cons
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="margin-y-1"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Requester indicated there is no associated cost with this solution
                    </dt>
                    <div
                      className="est-lifecycle-cost__total bg-base-lightest overflow-auto padding-x-2"
                    >
                      <dl
                        title="System total cost"
                      >
                        <dt
                          className="text-bold margin-bottom-05"
                        >
                          System total cost
                        </dt>
                        <dd
                          className="description-definition margin-0"
                        >
                          $0
                        </dd>
                      </dl>
                    </div>
                  </div>
                </div>
                <div
                  className="easi-review-row margin-bottom-0"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      What is the cost savings or avoidance associated with this solution?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cost savings
                    </dd>
                  </div>
                </div>
              </dl>
            </div>
            <div
              className="easi-only-print"
            >
              <h3
                className="easi-only-print business-case-solution-header"
              >
                Alternative B
              </h3>
              <dl
                className="margin-bottom-0"
                title="Alternative B"
              >
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Title
                    </dt>
                    <dd
                      className="description-definition margin-0"
                    >
                      Test alternative b solution
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Summary
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test summary
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Acquisition approach
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test acquisition approach
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Do you need to host your solution?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes, in the cloud (AWS, Azure, etc.)
                    </dd>
                  </div>
                </div>
                <div>
                  <div
                    className="easi-review-row"
                  >
                    <div
                      className="line-height-body-3"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        Where are you planning to host?
                      </dt>
                      <dd
                        className="description-definition margin-0 text-pre-wrap"
                      >
                        Test location
                      </dd>
                    </div>
                  </div>
                  <div
                    className="easi-review-row"
                  >
                    <div
                      className="line-height-body-3"
                    >
                      <dt
                        className="text-bold margin-bottom-05"
                      >
                        What, if any, type of cloud service are you planning to use for this solution (Iaas, PaaS, SaaS, etc.)?
                      </dt>
                      <dd
                        className="description-definition margin-0 text-pre-wrap"
                      >
                        Test cloud service
                      </dd>
                    </div>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Is your solution approved by IT Security for use at CMS (FedRAMP, FISMA approved, within the CMS cloud enclave)?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      No
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Is your solution in the process of CMS IT Security approval?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Will your solution have a User Interface?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Yes
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Pros
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test pros
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Alternative B: Cons
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cons
                    </dd>
                  </div>
                </div>
                <div
                  className="easi-review-row"
                >
                  <div
                    className="margin-y-1"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      Requester indicated there is no associated cost with this solution
                    </dt>
                    <div
                      className="est-lifecycle-cost__total bg-base-lightest overflow-auto padding-x-2"
                    >
                      <dl
                        title="System total cost"
                      >
                        <dt
                          className="text-bold margin-bottom-05"
                        >
                          System total cost
                        </dt>
                        <dd
                          className="description-definition margin-0"
                        >
                          $0
                        </dd>
                      </dl>
                    </div>
                  </div>
                </div>
                <div
                  className="easi-review-row margin-bottom-0"
                >
                  <div
                    className="line-height-body-3"
                  >
                    <dt
                      className="text-bold margin-bottom-05"
                    >
                      What is the cost savings or avoidance associated with this solution?
                    </dt>
                    <dd
                      className="description-definition margin-0 text-pre-wrap"
                    >
                      Test cost savings
                    </dd>
                  </div>
                </div>
              </dl>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="easi-pdf-export__controls margin-top-6"
  >
    <button
      className="usa-button usa-button--unstyled easi-no-print display-flex flex-align-center"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="usa-icon margin-right-05"
        focusable={false}
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
        />
      </svg>
      Download Business Case as PDF
    </button>
  </div>
</div>
`;
